# backend/core/models.py
@@ -273,6 +273,10 @@ class Session(TimeStampedModel):
         default=UPCOMING
     )
 
+    recording_url = models.TextField(blank=True, null=True)
+    recording_public_id = models.CharField(max_length=255, blank=True, null=True)
+    recording_uploaded_at = models.DateTimeField(blank=True, null=True)
+
     class Meta:
         db_table = 'session'
 
