# backend/core/serializers.py
@@ -285,3 +285,20 @@ class LoginSerializer(serializers.Serializer):
             return True
 
         return False
+
+
+class UploadRecordingRequestSerializer(serializers.Serializer):
+    file = serializers.FileField()
+    roomId = serializers.CharField(required=False, allow_blank=True)
+    userId = serializers.CharField(required=False, allow_blank=True)
+
+
+class UploadRecordingResponseSerializer(serializers.Serializer):
+    success = serializers.BooleanField()
+    message = serializers.CharField()
+    secure_url = serializers.URLField(required=False, allow_null=True)
+    public_id = serializers.CharField(required=False, allow_null=True)
+    session_id = serializers.IntegerField(required=False, allow_null=True)
+    duration = serializers.FloatField(required=False, allow_null=True)
+    bytes = serializers.IntegerField(required=False, allow_null=True)
+    format = serializers.CharField(required=False, allow_blank=True, allow_null=True)
